# migi

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
config/: migi.toml  secrets.enc  seed-config.md
docs/: philosophy.md  plan.md
docs/architecture/: overview.md
openspec/: README.md
openspec/core/: intervention.spec.md  learning.spec.md  observation.spec.md  symbiosis.spec.md  trust.spec.md
src/: config.rs  error.rs  intervener.rs  learner.rs  lib.rs  main.rs  monitor.rs  observer.rs  sandbox.rs  secrets.rs  trust.rs
src/observer/: log_observer.rs  metrics_observer.rs
